# dnabactanalyzer

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  python-app.yml
dnabactanalyzer/: genbank_file_generator.py  nucleotide_content.py
test_data/: test.fasta
tests/: test_genbank_file_generator.py  test_nucleotide_content.py
