[tool.poetry]
name = "dnabactanalyzer"
version = "0.1.0"
description = ""
authors = ["microbemax"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pandas = "^2.1.3"
numpy = "^1.26.2"
pytest = "^7.4.3"
biopython = "^1.81"
scipy = "^1.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
